# ewoms-eclgrids

./: CMakeLists.txt  README.md  config.h.cmake  dune.module  ewoms-eclgrids.pc.in
cmake/modules/: EwomsEclgridsMacros.cmake  FindZOLTAN.cmake  FindZoltanEwoms.cmake
ewoms/eclgrids/: cart_grid.c  cart_grid.h  cellquadrature.hh  columnextract.hh  cornerpoint_grid.c  cornerpoint_grid.h  cpgrid.hh  facequadrature.hh  grid_equal.cc  gridhelpers.cc  gridhelpers.hh  gridmanager.cc  gridmanager.hh  gridutilities.cc  gridutilities.hh  minpvprocessor.hh  pinchprocessor.hh  polyhedralgrid.hh  repairzcorn.hh  unstructuredgrid.c  unstructuredgrid.h
ewoms/eclgrids/common/: cartesianindexmapper.hh  geometryhelpers.cc  geometryhelpers.hh  gridadapter.hh  gridpartitioning.cc  gridpartitioning.hh  p2pcommunicator.hh  p2pcommunicator_impl.hh  volumes.hh  wellconnections.cc  wellconnections.hh  zoltangraphfunctions.cc  zoltangraphfunctions.hh  zoltanpartition.cc  zoltanpartition.hh
ewoms/eclgrids/cpgpreprocess/: facetopology.c  facetopology.h  geometry.c  geometry.h  preprocess.c  preprocess.h  uniquepoints.c  uniquepoints.h
ewoms/eclgrids/cpgrid/: cartesianindexmapper.hh  cpgrid.cc  cpgriddata.cc  cpgriddata.hh  datahandlewrappers.cc  datahandlewrappers.hh  defaultgeometrypolicy.hh  dgfparser.hh  entity.hh  entity2indexdatahandle.hh  entityrep.hh  geometry.hh  globalidmapping.hh  gridhelpers.cc  gridhelpers.hh  indexsets.hh  intersection.cc  intersection.hh  iterators.hh  orientedentitytable.hh  partitioniteratorrule.hh  partitiontypeindicator.cc  partitiontypeindicator.hh  persistentcontainer.hh  processeclipseformat.cc  readsinteflegacyformat.cc  writesinteflegacyformat.cc
ewoms/eclgrids/polyhedralgrid/: capabilities.hh  cartesianindexmapper.hh  declaration.hh  dgfparser.hh  entity.hh  entitypointer.hh  entityseed.hh  geometry.hh  grid.hh  gridfactory.hh  gridhelpers.hh  gridview.hh  idset.hh  indexset.hh  intersection.hh  intersectioniterator.hh  iterator.hh  persistentcontainer.hh
ewoms/eclgrids/utility/: cartesiantocompressed.cc  cartesiantocompressed.hh  compressedtocartesian.cc  compressedtocartesian.hh  errormacros.hh  parserincludes.hh  regionmapping.hh  sparsetable.hh  stopwatch.cc  stopwatch.hh  variablesizecommunicator.hh  velocityinterpolation.cc  velocityinterpolation.hh  wachspresscoord.cc  wachspresscoord.hh
examples/: grdecl2vtu.cc  mirror_grid.cc
examples/finitevolume/: evolve.hh  finitevolume.cc  initialize.hh  transportproblem2.hh  vtkout.hh
tests/: FIVE_ACTNUM.DATA  p2pcommunicator_test.cc  test_cartgrid.cc  test_column_extract.cc  test_compressed_cartesian_mapping.cc  test_cpgrid.cc  test_geom2d.cc  test_gridutilities.cc  test_minpvprocessor.cc  test_polyhedralgrid.cc  test_quadratures.cc  test_regionmapping.cc  test_repairzcorn.cc  test_sparsetable.cc  test_ug.cc  test_velocityinterpolation.cc  test_wachspresscoord.cc
tests/cpgrid/: distribution_test.cc  entity_test.cc  entityrep_test.cc  facetag_test.cc  geometry_test.cc  grid_nnc.cc  orientedentitytable_test.cc  partition_iterator_test.cc  zoltan_test.cc
